--- a/demo/css/sliderbase.css
+++ b/demo/css/sliderbase.css
@@ -26,7 +26,7 @@
     top:50%;
     width:30px;
     height:30px;
-    background:rgba(0,0,0,0.8);
+    background:url(../img/arrows.png) no-repeat;
     padding:4px;
     color:#fff;
     text-align:center;
@@ -34,11 +34,13 @@
 	cursor:pointer;
 }
 #prev{
-    left:-40px;   
+    left:-40px;
+	background-position:0 0;
 }
 
 #next{
-    right:-40px;   
+    right:-40px;
+	background-position:-32px 0;
 }
 #navDots{
     bottom: 4%;
